--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -1,58 +1,59 @@
-<h1 mat-dialog-title class="unselectable">Sign up</h1>
+<h1 class="unselectable" mat-dialog-title>Sign up</h1>
 <mat-dialog-content #validationForm>
-  <p>
-    <mat-form-field color="accent">
-      <mat-label>Email</mat-label>
-      <input matInput type="email" [formControl]="emailControl" placeholder="email@example.com">
-      <mat-error *ngIf="emailControl.errors?.email && !emailControl.errors?.required">
-        Please enter a valid email address
-      </mat-error>
-      <mat-error *ngIf="emailControl.errors?.required">
-        Email is required
-      </mat-error>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field color="accent">
-      <mat-label>Password</mat-label>
-      <input #password matInput type="password" [formControl]="passwordControl" placeholder="*****">
-      <mat-error *ngIf="passwordControl.errors?.required">
-        Password is required
-      </mat-error>
-      <mat-error *ngIf="!passwordControl.errors?.required && passwordControl.errors?.minlength">
-        Please enter a valid password (at least 6 symbols)
-      </mat-error>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field color="accent">
-      <mat-label>Password confirm</mat-label>
-      <input matInput type="password" [formControl]="passwordConfirmControl" placeholder="*****">
-      <mat-error *ngIf="passwordConfirmControl.errors?.required">
-        Password confirm is required
-      </mat-error>
-      <mat-error *ngIf="!passwordConfirmControl.errors?.required && passwordConfirmControl.errors?.equalityDisrupted">
-        Passwords should be equal
-      </mat-error>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field color="accent">
-      <mat-label>First name</mat-label>
-      <input matInput type="text" [formControl]="firstNameControl">
-      <mat-error *ngIf="firstNameControl.errors?.required">
-        Name is required
-      </mat-error>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field color="accent">
-      <mat-label>Last name</mat-label>
-      <input matInput (change)="onSecondNameChanged($event)" type="text">
-    </mat-form-field>
-  </p>
+    <p>
+        <mat-form-field color="accent">
+            <mat-label>Email</mat-label>
+            <input [formControl]="emailControl" matInput placeholder="email@example.com" type="email">
+            <mat-error *ngIf="emailControl.errors?.email && !emailControl.errors?.required">
+                Please enter a valid email address
+            </mat-error>
+            <mat-error *ngIf="emailControl.errors?.required">
+                Email is required
+            </mat-error>
+        </mat-form-field>
+    </p>
+    <p>
+        <mat-form-field color="accent">
+            <mat-label>Password</mat-label>
+            <input #password [formControl]="passwordControl" matInput placeholder="*****" type="password">
+            <mat-error *ngIf="passwordControl.errors?.required">
+                Password is required
+            </mat-error>
+            <mat-error *ngIf="!passwordControl.errors?.required && passwordControl.errors?.minlength">
+                Please enter a valid password (at least 6 symbols)
+            </mat-error>
+        </mat-form-field>
+    </p>
+    <p>
+        <mat-form-field color="accent">
+            <mat-label>Password confirm</mat-label>
+            <input [formControl]="passwordConfirmControl" matInput placeholder="*****" type="password">
+            <mat-error *ngIf="passwordConfirmControl.errors?.required">
+                Password confirm is required
+            </mat-error>
+            <mat-error
+                    *ngIf="!passwordConfirmControl.errors?.required && passwordConfirmControl.errors?.equalityDisrupted">
+                Passwords should be equal
+            </mat-error>
+        </mat-form-field>
+    </p>
+    <p>
+        <mat-form-field color="accent">
+            <mat-label>First name</mat-label>
+            <input [formControl]="firstNameControl" matInput type="text">
+            <mat-error *ngIf="firstNameControl.errors?.required">
+                Name is required
+            </mat-error>
+        </mat-form-field>
+    </p>
+    <p>
+        <mat-form-field color="accent">
+            <mat-label>Last name</mat-label>
+            <input (change)="onSecondNameChanged($event)" matInput type="text">
+        </mat-form-field>
+    </p>
 </mat-dialog-content>
 <div mat-dialog-actions>
-  <button mat-button (click)="onClose()">Close</button>
-  <button mat-button (click)="onConfirm()" cdkFocusInitial>Ok</button>
+    <button (click)="onClose()" mat-button>Close</button>
+    <button (click)="onConfirm()" cdkFocusInitial mat-button>Ok</button>
 </div>
