--- a/src/app/start-page/start-page.component.html
+++ b/src/app/start-page/start-page.component.html
@@ -1,6 +1,6 @@
 <div id="frame-container">
-  <iframe width="560" height="315" [src]="safeURL"
-          title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+    <iframe [src]="safeURL" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+            frameborder="0" height="315"
+            title="YouTube video player"
+            width="560"></iframe>
 </div>
