--- a/src/app/styles/consts.scss
+++ b/src/app/styles/consts.scss
@@ -1,4 +1,6 @@
 $form-color: darkslategrey;
 //$form-color: black;
+$mainText: #15b768;
+$matToolbarTextColor: #65e4a1;
 
 $max-form-responsive-width: 685px
