--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -1,6 +1,4 @@
-<button mat-stroked-button color="primary">Primary</button>
-<button mat-stroked-button color="accent" (click)="startSound($event)">Accent</button>
-<button mat-stroked-button color="warn" (click)="stopSound()">Warn</button>
-<button mat-stroked-button disabled>Disabled</button>
-<input type="range" min="0" max="1" step="0.01" value=".5" #volume (input)="changeVolume(volume.value)">
-<a mat-stroked-button href="https://www.google.com/" target="_blank">Link</a>
+<button mat-stroked-button color="warn" (click)="resetAudio()">Stop</button>
+<button mat-stroked-button color="accent" (click)="startSound()">Play</button>
+<button mat-stroked-button color="primary" (click)="stopSound()">Pause</button>
+<input type="range" min="0" max="1" step="0.001" value=".5" #volume (input)="changeVolume(volume.value)">
