--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -1,4 +1,26 @@
 <button mat-stroked-button color="warn" (click)="resetAudio()">Stop</button>
 <button mat-stroked-button color="accent" (click)="startSound()">Play</button>
 <button mat-stroked-button color="primary" (click)="stopSound()">Pause</button>
-<input type="range" min="0" max="1" step="0.001" value=".5" #volume (input)="changeVolume(volume.value)">
+<input type="range" min="0" max="2" step="0.001" value="1" #volume (input)="changeVolume(volume.value)">
+<div #dropArea
+     style="height: 50px; display: flex; align-items: center; justify-content: center; background-color: #304b49;">
+    <i class="material-icons">add</i>
+</div>
+<div class="stems-area">
+    <div>1</div>
+    <div class="scroll-bar">
+        <div style="background-color: #4d6d6e; width: 5vw; height: 100%;" cdkDragBoundary=".scroll-bar" cdkDrag (cdkDragEnded)="dragEnd($event)"></div>
+    </div>
+    <div>3</div>
+    <div class="slider unselectable">
+        <div cdkDragBoundary=".slider" cdkDrag (cdkDragEnded)="dragEnd($event)">
+            <i style="background-color: #4d6d6e" class="material-icons">keyboard_arrow_down</i>
+            <div class="element"></div>
+        </div>
+    </div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
+</div>
+<canvas #canvas style="height: 76vh; background-color: cadetblue"></canvas>
