--- a/src/app/project-page/project-page.component.scss
+++ b/src/app/project-page/project-page.component.scss
@@ -1,5 +1,7 @@
 @import "../styles/consts";
 
+$arrow-height: 15px;
+
 * {
   text-align: center;
   color: $mainText;
@@ -8,4 +10,32 @@
 :host {
   display: flex;
   flex-direction: column;
+}
+
+.stems-area {
+  display: grid;
+  grid-template-columns: 12fr 24fr;
+}
+
+.stems-area div:nth-child(2), .stems-area div:nth-child(4) {
+  background-color: #3e3e3e;
+}
+
+.stems-area div:hover {
+  //background-color: #4e4d4d;
+}
+
+.slider div {
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  width: fit-content;
+}
+
+.slider div div {
+  position: absolute;
+  background-color: floralwhite;
+  transform: rotate(90deg) translate($arrow-height + 150px);
+  height: 1px;
+  width: 300px;
 }
